Updated  Stories page

--- a/New folder/insta.html
+++ b/New folder/insta.html
@@ -71,13 +71,7 @@
                                 </li>
                                 <li><a href="results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
-                                 <li class="has-children">
-                                    <a href="story.html">Story</a>
-                                    <ul class="dropdown">
-                                        <li><a href="insta.html">Insta Feed</a></li>
-                                        <li><a href="admin/local.php">Editor's Pick</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -105,14 +99,27 @@
                 </div>
             </div>
         </header>
- <div class="col-md-7">
-            <div class="row mb-5">
-                <div class="col-12 ">
-                    <h2 class="site-section-heading text-center">The Results Haven't been declared yet , stay tuned</h2>
+<div class="" data-aos="fade">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <div class="row mb-5 site-section">
+                            <div class="col-12 ">
+                                <h2 class="site-section-heading text-center">Our Insta-Feed</h2>
+                            </div>
+                        </div>
+                        <div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'x6M7tCv_PccxadsC3Z7A'});Pixlee.addSimpleWidget({widgetId:'13302'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-		<div class="footer py-4">
+
+
+
+
+
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -129,6 +136,7 @@
                 </p>
             </div>
         </div>
+
 
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
