--- a/New folder/story.html
+++ b/New folder/story.html
@@ -71,7 +71,7 @@
                                 </li>
                                 <li><a href="results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
-                                 <li class="has-children">
+                                <li class="has-children">
                                     <a href="story.html">Story</a>
                                     <ul class="dropdown">
                                         <li><a href="insta.html">Insta Feed</a></li>
@@ -105,14 +105,33 @@
                 </div>
             </div>
         </header>
- <div class="col-md-7">
-            <div class="row mb-5">
-                <div class="col-12 ">
-                    <h2 class="site-section-heading text-center">The Results Haven't been declared yet , stay tuned</h2>
-                </div>
+ 
+ <div class="container-fluid" data-aos="fade" data-aos-delay="500">
+            <div class="swiper-container images-carousel">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="image-wrap">
+                            <div class="image-info">
+                                <h2 class="mb-3">Instagram</h2>
+                                <a href="insta.html" class="btn btn-outline-white py-2 px-4">See Pics</a>
+                            </div>
+                            <img src="images/img_1.jpg" alt="Image">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="image-wrap">
+                            <div class="image-info">
+                                <h2 class="mb-3">Editors Pick</h2>
+                                <a href="admin/local.php" class="btn btn-outline-white py-2 px-4">See Pics</a>
+                            </div>
+                            <img src="images/img_2.jpg" alt="Image">
+                        </div>
+                    </div>
             </div>
         </div>
-		<div class="footer py-4">
+    </div>
+	
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -129,6 +148,7 @@
                 </p>
             </div>
         </div>
+
 
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
