--- a/events.html
+++ b/events.html
@@ -52,7 +52,7 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -69,9 +69,15 @@
                                         <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Results.html">Results</a></li>
+                                <li><a href="results.html">Results</a></li>
+                                <li class="has-children">
+                                    <a href="story.html">Story</a>
+                                    <ul class="dropdown">
+                                        <li><a href="insta.html">Insta Feed</a></li>
+                                        <li><a href="admin/local.php">Editor's Pick</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -99,91 +105,104 @@
                 </div>
             </div>
         </header>
-        <div class="block">
-            <div class="tile is-ancestor">
-                <div class="tile is-vertical is-8">
-                    <div class="tile">
-                        <div class="tile is-parent is-vertical">
-                            <article class="tile is-child notification is-primary">
-                                <a href="events/segacite.html" style="color:black">
-                                    <p class="text-black h2 mb-0">Segacite</p>
-                                </a>
-                                <p class="subtitle" style="color:black"><b>“Because the cover of the book matters!”</b></p>
-                                <p style="color:black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
-                                <p class="subtitle" style="color:black"><b>20 ₹</b></p>
-                            </article>
-                            <article class="tile is-child notification is-warning">
-                                <a href="events/accentus.html" style="color:black">
-                                    <p class="text-black h2 mb-0">Accentus</p>
-                                </a>
-                                <p class="subtitle" style="color:black"><b>“Why so serious?”</b></p>
-                                <p style="color:black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p>
-                                <p class="subtitle" style="color:black"><b>20 ₹</b></p>
-                            </article>
+    </div>
+    <!-- GRID SYSTEM -->
+    <div class="site-section" data-aos="fade">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-md-7">
+                    <div class="row mb-5">
+                        <div class="col-12 ">
+                            <h2 class="site-section-heading text-center">Events</h2>
                         </div>
-                        <div class="tile is-parent">
-                            <article class="tile is-child notification is-info">
-                                <a href="events/msmr.html" style="color:black">
-                                    <p class="text-black h2 mb-0">Ms/Mr KnowHow</p>
-                                </a>
-                                <p class="subtitle" style="color:black"><b>“Win the occasion”</b></p>
-                                <figure class="image is-4by3">
-                                    <img src="images/Story/w%20(1).jpg">
-                                </figure>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-danger">
-                            <a href="events/cribado.html" style="color:black">
-                                <p class="text-black h2 mb-0">Cribado</p>
-                            </a>
-                            <p class="subtitle" style="color:black"><b>“Welcome to the Corporate World”</b></p>
-                            <div class="content">
-                                <p style="color:black">This event will help participants to crack the campus placement procedure.</p>
-                            </div>
-                            <p class="subtitle" style="color:black"><b>30 ₹</b></p>
-                        </article>
                     </div>
                 </div>
-                <div class="tile">
-                    <div class="tile is-parent is-vertical">
-                        <article class="tile is-child notification is-primary">
-                            <a href="events/vyakti.html" style="color:black">
-                                <p class="text-black h2 mb-0">Vyaktitvam</p>
-                            </a>
-                            <p class="subtitle" style="color:black"><b>“Everything you need to know is within”</b></p>
-                            <p style="color:black">Participant’s personality will be judged on the basis of psychological questions. The ability of participants to move an abstract idea to a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
-                            <p class="subtitle" style="color:black"><b>30 ₹</b></p>
-                        </article>
-                        <article class="tile is-child notification is-warning">
-                            <a href="events/ahlarry.html" style="color:black">
-                                <p class="text-black h2 mb-0">Ahl ar-Ra’y</p>
-                            </a>
-                            <p class="subtitle" style="color:black"><b>“People of Opinion”</b></p>
-                            <p style="color:black">Participants will be judged on the basis of knowledge of the current affairs, world as well as regional politics. The ability of participants to represent themselves as a delegate and make responsible decisions in diplomatic situations.</p>
-                            <p class="subtitle" style="color:black"><b>20 ₹</b></p>
-                        </article>
+            </div>
+            <div data-aos="fade">
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-md-7">
+                            <div class="row mb-5">
+                                <div class="col-12 ">
+                                    <h2 class="text-black h2 mb-0" style="text-align:center">Enter The Competition</h2>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/ahlarry.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Ahl ar-Ra'y</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“People of Opinion”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/vyakti.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Vyaktitvam</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“All that you need to know, is within you”</strong></p>
+                                            <p style="color: black">Participant’s personality and the ability to move an abstract idea into a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Accentus</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Why so serious?”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/segacite.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Segacite</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Because the cover of the book matters!”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/cribado.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Cribado</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Welcome to the Corporate World”</strong></p>
+                                            <p style="color: black">This event will help participants to crack the campus placement procedure.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/msmr.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Ms/Mr KnowHow</h3>
+                                            <p><strong class="font-weight-bold text-primary" style="color: black">“Win the occasion”</strong></p>
+                                            <p style="color: black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                            <p><strong class="font-weight-bold text-primary">₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-        <div class="footer py-4">
+        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                    <a href="https://github.com/RajeshPandey057">
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -192,8 +211,6 @@
                 </p>
             </div>
         </div>
-
-
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
