--- a/to.html
+++ b/to.html
@@ -52,7 +52,7 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -70,8 +70,14 @@
                                     </ul>
                                 </li>
                                 <li><a href="results.html">Results</a></li>
+                                <li class="has-children">
+                                    <a href="story.html">Story</a>
+                                    <ul class="dropdown">
+                                        <li><a href="insta.html">Insta Feed</a></li>
+                                        <li><a href="admin/local.php">Editor's Pick</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -99,196 +105,71 @@
                 </div>
             </div>
         </header>
- <section class="hero is-fullheight is-primary" style="color:fuchsia">
-            <div class="hero-head" style="color:fuchsia">
-                <div class="container" style="color:fuchsia">
-                    <div class="tabs is-centered" style="color:fuchsia">
-                        <ul style="color:fuchsia">
-                            <li><a>This is always at the top</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="hero-body">
-                <div class="container has-text-centered">
-                    <h3 class="title is-2">
-                        <a href="https://bulma.io/documentation/layout/hero/">
-                            <span class="icon is-medium">
-                                <i class="fa fa-arrows-v"></i>
-                            </span> Easy <strong>vertical centering</strong> in <strong>fullscreen</strong>
-                        </a>
-                    </h3>
-                    <h4 class="subtitle is-4">Include any content you want, it's always centered</h4>
-                </div>
-            </div>
-
-            <div class="hero-foot">
-                <div class="container">
-                    <div class="tabs is-centered">
-                        <ul>
-                            <li><a>And this at the bottom</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- GRID SYSTEM -->
-        <div class="block">
-            <div class="columns">
-                <div class="column">
-                    <p class="notification">First Column</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Second Column</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Third Column</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Fourth Column</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-2">
-                    <p class="notification">2 column</p>
-                </div>
-                <div class="column is-8">
-                    <p class="notification">8 Column</p>
-                </div>
-                <div class="column is-2">
-                    <p class="notification">2 Column</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-three-quarters">
-                    <p class="notification">is-three-quarters</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-two-thirds">
-                    <p class="notification">is-two-thirds</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-half">
-                    <p class="notification">is-half</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="tile is-ancestor">
-                <div class="tile is-vertical is-8">
-                    <div class="tile">
-                        <div class="tile is-parent is-vertical">
-                            <article class="tile is-child notification is-primary">
-                                <p class="title">Vertical...</p>
-                                <p class="subtitle">Top tile</p>
-                            </article>
-                            <article class="tile is-child notification is-warning">
-                                <p class="title">...tiles</p>
-                                <p class="subtitle">Bottom tile</p>
-                            </article>
-                        </div>
-                        <div class="tile is-parent">
-                            <article class="tile is-child notification is-info">
-                                <p class="title">Middle tile</p>
-                                <p class="subtitle">With an image</p>
-                                <figure class="image is-4by3">
-                                    <img src="https://bulma.io/images/placeholders/640x480.png">
-                                </figure>
-                            </article>
+    </div>
+    <!-- GRID SYSTEM -->
+    <div class="site-section" data-aos="fade">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-md-7">
+                    <div class="row mb-5">
+                        <div class="col-12 ">
+                            <h2 class="site-section-heading text-center">Events</h2>
                         </div>
                     </div>
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-danger">
-                            <p class="title">Wide tile</p>
-                            <p class="subtitle">Aligned with the right tile</p>
-                            <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+                </div>
+            </div>
+            <div data-aos="fade">
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-md-7">
+                            <div class="row mb-5">
+                                <div class="col-12 ">
+                                    <h2 class="text-black h2 mb-0" style="text-align:center">Enter The Competition</h2>
+                                </div>
                             </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-success">
-                        <p class="title">Tall tile</p>
-                        <p class="subtitle">With even more content</p>
-                        <div class="content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
-                            <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at volutpat tortor.</p>
-                            <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus dolor consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper leo.</p>
+                            <div class="row">
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/ahlarry.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Event Co-ordinators</h3>
+                                            <p style="color: black">Contact details of Co-ordinators to resolve your query about events</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/vyakti.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Developers</h3>
+                                            <p style="color: black">Contacts and Credits to Developer of the website.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 30 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                                    <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7"><a href="events/accentus.html">
+                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
+                                            <h3 class="text-black h4">Send Query</h3>
+                                            <p style="color: black">Not in mood of a phone call, Don't Worry.Send us an E-mail Query.</p>
+                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </article>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <!-- PAGINATION -->
-        <div class="block">
-            <nav class="pagination">
-                <a href="" class="pagination-previous" disabled>Previous</a>
-                <a href="" class="pagination-next">Next page</a>
-                <ul class="pagination-list">
-                    <li>
-                        <a href="" class="pagination-link is-current">1</a>
-                    </li>
-                    <li>
-                        <a href="" class="pagination-link">2</a>
-                    </li>
-                    <li>
-                        <a href="" class="pagination-link">3</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-
-
-
-
-
-
-        <div class="footer py-4">
+        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                    <a href="https://github.com/RajeshPandey057">
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -297,8 +178,6 @@
                 </p>
             </div>
         </div>
-
-
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
