--- a/New folder/about.html
+++ b/New folder/about.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
-    <meta charset="utf-8">
+    <link rel="icon" type="image/ico" href="images/logo.png" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -20,7 +18,26 @@
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        @media screen and (max-width: 768px) {
+            #menu-toggle:checked+.nav-menu {
+                display: block;
+            }
+        }
+
+        .hero-body>.container {
+            padding: 0 10px;
+        }
+
+    </style>
 </head>
+
 <body>
     <div class="site-wrap">
         <div class="site-mobile-menu">
@@ -31,7 +48,7 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-        <header class="site-navbar py-3 border-bottom" role="banner">
+        <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
@@ -40,26 +57,34 @@
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
-                                    <a href="single.html">Events</a>
+                                    <a href="events.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="cribado.html">Cribado</a></li>
-                                        <li><a href="accentus.html">Accentus</a></li>
-                                        <li><a href="ahlarry.html">Alh ar'ray</a></li>
-                                        <li><a href="segacite.html">Segacite</a></li>
-                                        <li><a href="vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="events/ahlarry.html">Ahl ar'ray</a></li>
+                                        <li><a href="events/vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="events/accentus.html">Accentus</a></li>
+                                        <li><a href="events/segacite.html">Segacite</a></li>
+                                        <li><a href="events/cribado.html">Cribado</a></li>
+                                        <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Results.html">Results</a></li>
+                                <li><a href="results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
                                 <li class="has-children">
+                                    <a href="story.html">Story</a>
+                                    <ul class="dropdown">
+                                        <li><a href="insta.html">Insta Feed</a></li>
+                                        <li><a href="admin/local.php">Editor's Pick</a></li>
+                                    </ul>
+                                </li>
+                                <li class="has-children">
                                     <a href="to.html">Contact</a>
-                                            <ul class="dropdown">
-                                                <li><a href="evco.html">Event Co-ordinators</a></li>
-                                                <li><a href="dev.html">Developers</a></li>
-                                                <li><a href="contact.html">Send Query</a></li>
-                                            </ul>
+                                    <ul class="dropdown">
+                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
+                                        <li><a href="contact/dev.html">Developers</a></li>
+                                        <li><a href="contact/contact.html">Send Query</a></li>
+                                    </ul>
                                 </li>
                             </ul>
                         </nav>
@@ -68,16 +93,10 @@
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                                 <li>
-                                    <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                                    <a href="https://www.facebook.com/bvmcollegetpc" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                                    <a href="https://www.instagram.com/bvmtpc/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                                 </li>
                             </ul>
                         </div>
@@ -86,7 +105,7 @@
                 </div>
             </div>
         </header>
-        <div class="" data-aos="fade">
+ <div class="" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-7">
@@ -140,6 +159,32 @@
                 </div>
             </div>
         </div>
+
+
+
+
+
+
+
+        <div class="footer py-4">
+            <div class="container-fluid text-center">
+                <p>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                        <span class="icon">
+                            <i class="fa fa-github"></i>
+                        </span>
+                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    <script>
+                        document.write(new Date().getFullYear());
+
+                    </script>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+            </div>
+        </div>
+
+
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -161,6 +206,8 @@
         $(document).ready(function() {
             $('#lightgallery').lightGallery();
         });
+
     </script>
 </body>
+
 </html>
