--- a/insta.html
+++ b/insta.html
@@ -52,7 +52,7 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -70,14 +70,14 @@
                                     </ul>
                                 </li>
                                 <li><a href="results.html">Results</a></li>
-                                <li><a href="about.html">About US</a></li>
-                                 <li class="has-children">
+                                <li class="has-children">
                                     <a href="story.html">Story</a>
                                     <ul class="dropdown">
                                         <li><a href="insta.html">Insta Feed</a></li>
                                         <li><a href="admin/local.php">Editor's Pick</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="about.html">About US</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -105,31 +105,53 @@
                 </div>
             </div>
         </header>
- <div class="col-md-7">
-            <div class="row mb-5">
-                <div class="col-12 ">
-                    <h2 class="site-section-heading text-center">The Results Haven't been declared yet , stay tuned</h2>
+
+        <div class="" data-aos="fade">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <div class="row mb-5 site-section">
+                            <div class="col-12 ">
+                                <h2 class="site-section-heading text-center">Our Insta-Feed</h2>
+                            </div>
+                        </div>
+                        <div id="pixlee_container"></div>
+                        <script type="text/javascript">
+                            window.PixleeAsyncInit = function() {
+                                Pixlee.init({
+                                    apiKey: 'x6M7tCv_PccxadsC3Z7A'
+                                });
+                                Pixlee.addSimpleWidget({
+                                    widgetId: '13302'
+                                });
+                            };
+
+                        </script>
+                        <script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+                    </div>
                 </div>
             </div>
         </div>
-		<div class="footer py-4">
-            <div class="container-fluid text-center">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
-                        <span class="icon">
-                            <i class="fa fa-github"></i>
-                        </span>
-                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                    <script>
-                        document.write(new Date().getFullYear());
+    </div>
 
-                    </script>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-            </div>
+
+
+    <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
+        <div class="container-fluid text-center">
+            <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                <a href="https://github.com/RajeshPandey057">
+                    <span class="icon">
+                        <i class="fa fa-github"></i>
+                    </span>
+                </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                <script>
+                    document.write(new Date().getFullYear());
+
+                </script>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
         </div>
-
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
