--- a/intro.html
+++ b/intro.html
@@ -52,7 +52,7 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -70,14 +70,14 @@
                                     </ul>
                                 </li>
                                 <li><a href="results.html">Results</a></li>
-                                <li><a href="about.html">About US</a></li>
-                                 <li class="has-children">
+                                <li class="has-children">
                                     <a href="story.html">Story</a>
                                     <ul class="dropdown">
                                         <li><a href="insta.html">Insta Feed</a></li>
                                         <li><a href="admin/local.php">Editor's Pick</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="about.html">About US</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -105,22 +105,73 @@
                 </div>
             </div>
         </header>
- <div class="col-md-7">
-            <div class="row mb-5">
-                <div class="col-12 ">
-                    <h2 class="site-section-heading text-center">The Results Haven't been declared yet , stay tuned</h2>
+
+        <div class="" data-aos="fade">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <div class="row mb-5 site-section">
+                            <div class="col-12 ">
+                                <h2 class="site-section-heading text-center">About Us</h2>
+                            </div>
+                        </div>
+                        <div class="row mb-5">
+                            <div class="col-md-7">
+                                <img src="images/img_2.jpg" alt="Images" class="img-fluid">
+                            </div>
+                            <div class="col-md-4 ml-auto">
+                                <h3>Vision And Mission</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus, ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
+                            </div>
+                        </div>
+                        <div class="row site-section">
+                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
+                                <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+                                <h2 class="text-black font-weight-light mb-4">Rishabh Shah</h2>
+                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ab quas facilis obcaecati non ea, est odit repellat distinctio incidunt, quia aliquam eveniet quod deleniti impedit sapiente atque tenetur porro?</p>
+                                <p>
+                                    <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
+                                <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+                                <h2 class="text-black font-weight-light mb-4">Ankur Varma</h2>
+                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ab quas facilis obcaecati non ea, est odit repellat distinctio incidunt, quia aliquam eveniet quod deleniti impedit sapiente atque tenetur porro?</p>
+                                <p>
+                                    <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5">
+                                <img src="images/person_4.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-4">
+                                <h2 class="text-black font-weight-light mb-4">Rajesh Pandey</h2>
+                                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ab quas facilis obcaecati non ea, est odit repellat distinctio incidunt, quia aliquam eveniet quod deleniti impedit sapiente atque tenetur porro?</p>
+                                <p>
+                                    <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                                    <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-		<div class="footer py-4">
+
+
+
+        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                    <a href="https://github.com/RajeshPandey057">
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -129,7 +180,6 @@
                 </p>
             </div>
         </div>
-
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
