--- a/story.html
+++ b/story.html
@@ -52,7 +52,7 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -70,8 +70,14 @@
                                     </ul>
                                 </li>
                                 <li><a href="results.html">Results</a></li>
+                                <li class="has-children">
+                                    <a href="story.html">Story</a>
+                                    <ul class="dropdown">
+                                        <li><a href="insta.html">Insta Feed</a></li>
+                                        <li><a href="admin/local.php">Editor's Pick</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="about.html">About US</a></li>
-                                <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -99,23 +105,43 @@
                 </div>
             </div>
         </header>
- <div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'x6M7tCv_PccxadsC3Z7A'});Pixlee.addSimpleWidget({widgetId:'13302'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+
+        <div class="container-fluid" data-aos="fade" data-aos-delay="500">
+            <div class="swiper-container images-carousel">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="image-wrap">
+                            <div class="image-info">
+                                <h2 class="mb-3">Instagram</h2>
+                                <a href="insta.html" class="btn btn-outline-white py-2 px-4">See Pics</a>
+                            </div>
+                            <img src="images/img_1.jpg" alt="Image">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="image-wrap">
+                            <div class="image-info">
+                                <h2 class="mb-3">Editors Pick</h2>
+                                <a href="admin/local.php" class="btn btn-outline-white py-2 px-4">See Pics</a>
+                            </div>
+                            <img src="images/img_2.jpg" alt="Image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
-
-
-
-
-        <div class="footer py-4">
+        <div class="footer py-4" style="position: fixed;width: 100%;bottom: 0px">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                    <a href="https://github.com/RajeshPandey057">
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
@@ -124,8 +150,6 @@
                 </p>
             </div>
         </div>
-
-
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
